# tally_project

./: .env.sample  .gitignore  README.md  db_config.ini  init_database.py  learn.py  ledgers_20260204_112822.csv  logging_config.py  main.py  pyproject.toml  requirements.txt  run_gui.py  scheduler_config.json  test.py  test1.py
database/: database_processor.py  db_connector.py
database/config/: config.py
database/models/: __init__.py  base.py  company.py  inventory_voucher.py  item.py  ledger.py  ledger_models.py  ledger_voucher.py  scheduler_config.py  sync_metadata.py  sync_state.py  trial_balance.py  vouchers.py
gui/: app.py  state.py  styles.py  ui_helpers.py
gui-pyauto/: __init__.py  main.py  pyutils.py
gui/components/: company_card.py  configure_company_dialog.py  date_range_picker.py  initial_snapshot_dialog.py  status_badge.py  sync_progress_panel.py  voucher_selector.py
gui/controllers/: company_controller.py  scheduler_controller.py  sync_controller.py
gui/pages/: home_page.py  logs_page.py  scheduler_page.py  settings_page.py  sync_page.py
services/: currency_extractor.py  data_processor.py  sync_service.py  tally_connector.py
tally/: tally_connector.py
utils/: company.xml  contra_vouchers.xml  credit_note.xml  debit_note.xml  groups.xml  item.xml  journal_vouchers.xml  ledger.xml  payment_vouchers.xml  purchase_vouchers.xml  receipt_vouchers.xml  sales_vouchers.xml
utils/cdc/: contra_cdc.xml  credit_cdc.xml  debit_cdc.xml  groups.xml  item_cdc.xml  journal_cdc.xml  ledger.xml  ledger_cdc.xml  payment_cdc.xml  purchase_cdc.xml  (+2 more)
(+3 files in other folders)
